[FIX] Fix bugs 3

--- a/hw02.md
+++ b/hw02.md
@@ -1,8 +1,8 @@
 1. https://leetcode.com/problems/string-to-integer-atoi/submissions/1798854762
-![Q01](/images/hw03_q01.png)
+![Q01](/images/hw02_q01.png)
 
 2. https://leetcode.com/problems/find-all-anagrams-in-a-string/submissions/1799918038
-![Q02](/images/hw03_q02.png)
+![Q02](/images/hw02_q02.png)
 
 3. https://leetcode.com/problems/reverse-words-in-a-string/submissions/1800507994/
-![Q03](/images/hw03_q03.png)
+![Q03](./images/hw02_q03.png)
